# qwlroots

./: .envrc  .gitignore  .gitmodules  CMakeLists.txt  README.md  README.zh_CN.md  analyze_coverage.py  default.nix  flake.nix  garnix.yaml
.cursor/rules/: public.mdc
.github/workflows/: archlinux-build.yaml
.obs/: deepin_workflows.yml  workflows.yml
.reuse/: dep5
cmake/: PackageVersionHelper.cmake  WaylandScannerHelpers.cmake
debian/: changelog  control  copyright  libqwlroots-dev.install  postinst.ex  postrm.ex  preinst.ex  prerm.ex  rules  shlibs.local.ex  watch  watch.ex
doc/ai/: qwcolormanagementv1-usage-guide.md  qwlroots-wrapping-patterns-best-practices-en.md  qwlroots-wrapping-patterns-best-practices.md
examples/: CMakeLists.txt
examples/tinywl/: CMakeLists.txt  main.cpp
nix/: default.nix
src/: CMakeLists.txt  class_template.txt  qw_backend.h  qw_object.h  qwbackend.cpp  qwbackend.h  qwdisplay.cpp  qwdisplay.h  qwglobal.cpp  qwglobal.h  qwobject.cpp  qwobject.h
src/cmake/: CMakeConfig.cmake.in  QWlrootsConfig.cmake  pkgconfig.pc.in  qwconfig.h.in
src/interfaces/: qw_backend_interface.h  qw_interface.h  qwbackendinterface.cpp  qwbackendinterface.h  qwbufferinterface.cpp  qwbufferinterface.h  qwinterface.h  qwkeyboardinterface.cpp  qwkeyboardinterface.h  qwoutputinterface.cpp  qwoutputinterface.h  qwpointerinterface.cpp  qwpointerinterface.h  qwrendererinterface.cpp  qwrendererinterface.h  qwswitchinterface.cpp  qwswitchinterface.h  qwtabletpadinterface.cpp  qwtabletpadinterface.h
src/kernel/: CMakeLists.txt  qwbackend.cpp  qwglobal.cpp  qwglobal.h
src/kernel/render/: qwrenderer.cpp  qwrenderer.h
src/kernel/types/: qwbuffer.cpp  qwbuffer.h
src/private/: qwglobal_p.h
src/render/: qw_texture.h  qwallocator.cpp  qwallocator.h  qwcolor.h  qwdmabuf.h  qwdrmformatset.h  qwdrmsyncobj.h  qwegl.cpp  qwegl.h  qwrenderer.cpp  qwrenderer.h  qwswapchain.cpp  qwswapchain.h  qwtexture.cpp  qwtexture.h
src/types/: qwalphamodifierv1.h  qwbuffer.cpp  qwbuffer.h  qwclientbuffer.cpp  qwcolormanagerv1.h  qwcompositor.cpp  qwcompositor.h  qwcontenttypev1.cpp  qwcontenttypev1.h  qwcursor.cpp  qwcursor.h  qwcursorshapev1.cpp  qwcursorshapev1.h  qwdamagering.cpp  qwdamagering.h  qwdatacontrolmanagerv1.cpp  qwdatacontrolv1.h  qwdatadevice.cpp  qwdatadevice.h  qwdatadevicev1.cpp  qwdatasource.cpp  qwdrag.cpp  qwdrm.cpp  qwdrm.h  qwdrmleaserequestv1.cpp  qwdrmleasev1.cpp  qwdrmleasev1.h  qwdrmleasev1manager.cpp  qwexportdmabufmanagerv1.cpp  qwexportdmabufv1.h  qwextforeigntoplevellistv1.h  qwextimagecopycapturev1.h  qwforeigntoplevelhandlev1.cpp  qwforeigntoplevelhandlev1.h  qwforeigntoplevelmanagerv1.cpp  qwfractionalscalemanagerv1.cpp  qwfractionalscalemanagerv1.h  qwfractionalscalev1.cpp  qwfractionalscalev1.h  qwfullscreenshellv1.cpp  (+131 more)
src/util/: qwbox.h  qwlogging.cpp  qwlogging.h  qwsignalconnector.cpp  qwsignalconnector.h
tests/: CMakeLists.txt  test_qwobject.cpp
tests/qwobject_test/: CMakeLists.txt  qwabc.h  test_qwobject.cpp  wlr_abc.cpp  wlr_abc.h
